# LinuxSoftwareSnapshoter

./: .gitignore  Cargo.toml  config.json5
src/: constants.rs  lib.rs  settings.rs
src/detector/: error.rs  exec.rs  lib.rs  mod.rs
src/generator/: configGenerator.rs  config_generator.rs  mod.rs  structs.rs
