[package]
name = "confshoter"
version = "0.1.0"
edition = "2021"
default-run = "tui"

[[bin]]
name = "tui"

[[bin]]
name = "prepare"


[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
config = {version = "0.13", features = ["json5"] }
pretty_env_logger = "0.5"
log = "0.4"